test/classes/delete-free/undecorated-generic/duplicate-management.good
duplicate-management.chpl:3: In function 'factory':
duplicate-management.chpl:4: error: duplicate decorators - owned owned MyClass
duplicate-management.chpl:7: Function 'factory' instantiated as: factory(type t = owned MyClass)
duplicate-management.chpl:3: In function 'factory':
duplicate-management.chpl:4: error: duplicate decorators - owned shared MyClass
duplicate-management.chpl:9: Function 'factory' instantiated as: factory(type t = shared MyClass)
duplicate-management.chpl:3: In function 'factory':
duplicate-management.chpl:4: error: duplicate decorators - owned unmanaged MyClass
duplicate-management.chpl:11: Function 'factory' instantiated as: factory(type t = unmanaged MyClass)
duplicate-management.chpl:3: In function 'factory':
duplicate-management.chpl:4: error: duplicate decorators - owned borrowed MyClass
duplicate-management.chpl:13: Function 'factory' instantiated as: factory(type t = borrowed MyClass)
duplicate-management.chpl:18: In function 'tu':
duplicate-management.chpl:19: error: duplicate decorators - unmanaged owned MyClass
duplicate-management.chpl:22: Function 'tu' instantiated as: tu(type t = owned MyClass)
duplicate-management.chpl:18: In function 'tu':
duplicate-management.chpl:19: error: duplicate decorators - unmanaged shared MyClass
duplicate-management.chpl:24: Function 'tu' instantiated as: tu(type t = shared MyClass)
duplicate-management.chpl:18: In function 'tu':
duplicate-management.chpl:19: error: duplicate decorators - unmanaged unmanaged MyClass
duplicate-management.chpl:26: Function 'tu' instantiated as: tu(type t = unmanaged MyClass)
duplicate-management.chpl:18: In function 'tu':
duplicate-management.chpl:19: error: duplicate decorators - unmanaged borrowed MyClass
duplicate-management.chpl:28: Function 'tu' instantiated as: tu(type t = borrowed MyClass)
duplicate-management.chpl:34: In function 'tb':
duplicate-management.chpl:35: error: duplicate decorators - borrowed owned MyClass
duplicate-management.chpl:38: Function 'tb' instantiated as: tb(type t = owned MyClass)
duplicate-management.chpl:34: In function 'tb':
duplicate-management.chpl:35: error: duplicate decorators - borrowed shared MyClass
duplicate-management.chpl:40: Function 'tb' instantiated as: tb(type t = shared MyClass)
duplicate-management.chpl:34: In function 'tb':
duplicate-management.chpl:35: error: duplicate decorators - borrowed unmanaged MyClass
duplicate-management.chpl:42: Function 'tb' instantiated as: tb(type t = unmanaged MyClass)
duplicate-management.chpl:34: In function 'tb':
duplicate-management.chpl:35: error: duplicate decorators - borrowed borrowed MyClass
duplicate-management.chpl:44: Function 'tb' instantiated as: tb(type t = borrowed MyClass)
duplicate-management.chpl:50: In function 'to':
duplicate-management.chpl:50: error: duplicate decorators - owned owned MyClass
duplicate-management.chpl:54: Function 'to' instantiated as: to(type t = owned MyClass)
duplicate-management.chpl:50: In function 'to':
duplicate-management.chpl:50: error: duplicate decorators - owned shared MyClass
duplicate-management.chpl:56: Function 'to' instantiated as: to(type t = shared MyClass)
